--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.3.5",
-    "mongoose": "^5.7.13",
-    "nodemon": "^2.0.1"
+    "mongoose": "^5.7.13"
   },
   "devDependencies": {},
   "scripts": {
